// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components:results:AboutButton matches the snapshot when format is desktop 1`] = `
<button
  className="sc-bdVaJa iHWtpO"
  format="desktop"
  onClick={[Function]}
>
  About Community Law
</button>
`;

exports[`components:results:AboutButton matches the snapshot when format is mobile 1`] = `
<button
  className="sc-bdVaJa iqaiid"
  format="mobile"
  onClick={[Function]}
>
  About Community Law
</button>
`;

exports[`components:results:AboutButton matches the snapshot when format is tablet 1`] = `
<button
  className="sc-bdVaJa iqaiid"
  format="tablet"
  onClick={[Function]}
>
  About Community Law
</button>
`;
